--- a/README
+++ b/README
@@ -19,19 +19,14 @@ TODO: well, the description... ;-)
 
 Copyright (C) 2007 Jens Wille
 
-ruby-nuggets is free software; you can redistribute it and/or modify it under
+ruby-nuggets is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
-Foundation; either version 2 of the License, or (at your option) any later
+Foundation, either version 3 of the License, or (at your option) any later
 version.
 
-ruby-nuggets is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-details.
+ruby-nuggets is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-You should have received a copy of the GNU General Public License along
-with ruby-nuggets [*]; if not, write to the Free Software Foundation, Inc.,
-51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
-
-\* For the complete text of the GNU General Public License see the file
-COPYING or point your browser at <http://www.gnu.org/licenses/gpl.txt>
+You should have received a copy of the GNU General Public License along with
+ruby-nuggets. If not, see <http://www.gnu.org/licenses/>.
