--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 == VERSION
 
-This documentation refers to ruby-nuggets version 0.0.1
+This documentation refers to ruby-nuggets version 0.0.2
 
 
 == DESCRIPTION
@@ -17,7 +17,7 @@ TODO: well, the description... ;-)
 
 == LICENSE AND COPYRIGHT
 
-Copyright (C) 2007 Jens Wille
+Copyright (C) 2007-2008 Jens Wille
 
 ruby-nuggets is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
