Added .gitignore, gemspec, and project links.

--- a/README
+++ b/README
@@ -10,6 +10,13 @@ This documentation refers to ruby-nuggets version 0.3.6
 TODO: well, the description... ;-)
 
 
+== LINKS
+
+* <http://prometheus.rubyforge.org/ruby-nuggets>
+* <http://prometheus.rubyforge.org/svn/scratch/ruby-nuggets>
+* <http://github.com/blackwinter/ruby-nuggets>
+
+
 == AUTHORS
 
 * Jens Wille <mailto:jens.wille@uni-koeln.de>
