A project description and some documentation, at last. v0.4.0

--- a/README
+++ b/README
@@ -2,12 +2,33 @@
 
 == VERSION
 
-This documentation refers to ruby-nuggets version 0.3.6
+This documentation refers to ruby-nuggets version 0.4.0
 
 
 == DESCRIPTION
 
-TODO: well, the description... ;-)
+ruby-nuggets provides a collection of extensions to Ruby core classes. In
+its effort, it's similar to projects like Facets[http://facets.rubyforge.org]
+and Extensions[http://extensions.rubyforge.org] (or even
+Labrador[http://rubyforge.org/projects/labrador/]), though not as ambitious ;-)
+This is simply where I put stuff that I need on a more or less regular basis
+or that struck me as interesting while surfing the web, reading books, or
+following discussions on ruby-talk.
+
+There are several ways to get at the nuggets you're interested in:
+
+  # The usual way: Just require() what you need
+  require 'nuggets/object/singleton_class'
+
+  # The more fancy way ;-) (see the documentation of Nuggets() for more examples)
+  require 'nuggets'
+  Nuggets(:object => 'singleton_class', :string => %w[nsub sub_with_md])
+
+  # Finally, get everything there is...
+  require 'nuggets/all'
+
+Please be aware that some of the things herein might not work as expected or
+cause other libraries to misbehave. Use at your own risk!
 
 
 == LINKS
