--- a/README
+++ b/README
@@ -33,9 +33,11 @@ cause other libraries to misbehave. Use at your own risk!
 
 == LINKS
 
-* <http://prometheus.rubyforge.org/ruby-nuggets>
-* <http://prometheus.rubyforge.org/svn/scratch/ruby-nuggets>
-* <http://github.com/blackwinter/ruby-nuggets>
+<b></b>
+Documentation::     <http://prometheus.rubyforge.org/ruby-nuggets>
+Source code (old):: <http://prometheus.rubyforge.org/svn/scratch/ruby-nuggets>
+Source code::       <http://github.com/blackwinter/ruby-nuggets>
+Rubyforge project:: <http://rubyforge.org/projects/prometheus>
 
 
 == AUTHORS
