--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 == VERSION
 
-This documentation refers to ruby-nuggets version 0.6.4
+This documentation refers to ruby-nuggets version 0.6.5
 
 
 == DESCRIPTION
@@ -38,6 +38,7 @@ Documentation::     <http://prometheus.rubyforge.org/ruby-nuggets>
 Source code (old):: <http://prometheus.rubyforge.org/svn/scratch/ruby-nuggets>
 Source code::       <http://github.com/blackwinter/ruby-nuggets>
 Rubyforge project:: <http://rubyforge.org/projects/prometheus>
+RubyGem::           <http://rubygems.org/gems/ruby-nuggets>
 
 
 == AUTHORS
@@ -47,7 +48,7 @@ Rubyforge project:: <http://rubyforge.org/projects/prometheus>
 
 == LICENSE AND COPYRIGHT
 
-Copyright (C) 2007-2010 Jens Wille
+Copyright (C) 2007-2011 Jens Wille
 
 ruby-nuggets is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
