Switched license to Affero GPL.

--- a/README
+++ b/README
@@ -34,11 +34,10 @@ cause other libraries to misbehave. Use at your own risk!
 == LINKS
 
 <b></b>
-Documentation::     <http://prometheus.rubyforge.org/ruby-nuggets>
-Source code (old):: <http://prometheus.rubyforge.org/svn/scratch/ruby-nuggets>
-Source code::       <http://github.com/blackwinter/ruby-nuggets>
-Rubyforge project:: <http://rubyforge.org/projects/prometheus>
-RubyGem::           <http://rubygems.org/gems/ruby-nuggets>
+Documentation::     http://prometheus.rubyforge.org/ruby-nuggets
+Source code::       http://github.com/blackwinter/ruby-nuggets
+RubyForge project:: http://rubyforge.org/projects/prometheus
+RubyGem::           http://rubygems.org/gems/ruby-nuggets
 
 
 == AUTHORS
@@ -51,13 +50,14 @@ RubyGem::           <http://rubygems.org/gems/ruby-nuggets>
 Copyright (C) 2007-2011 Jens Wille
 
 ruby-nuggets is free software: you can redistribute it and/or modify it under
-the terms of the GNU General Public License as published by the Free Software
-Foundation, either version 3 of the License, or (at your option) any later
-version.
+the terms of the GNU Affero General Public License as published by the Free
+Software Foundation, either version 3 of the License, or (at your option)
+any later version.
 
-ruby-nuggets is distributed in the hope that it will be useful, but WITHOUT ANY
-WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
-A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ruby-nuggets is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
+details.
 
-You should have received a copy of the GNU General Public License along with
-ruby-nuggets. If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU Affero General Public License along
+with ruby-nuggets. If not, see <http://www.gnu.org/licenses/>.
