--- a/README
+++ b/README
@@ -42,12 +42,12 @@ RubyGem::           http://rubygems.org/gems/ruby-nuggets
 
 == AUTHORS
 
-* Jens Wille <mailto:jens.wille@uni-koeln.de>
+* Jens Wille <mailto:jens.wille@gmail.com>
 
 
 == LICENSE AND COPYRIGHT
 
-Copyright (C) 2007-2012 Jens Wille
+Copyright (C) 2007-2013 Jens Wille
 
 ruby-nuggets is free software: you can redistribute it and/or modify it under
 the terms of the GNU Affero General Public License as published by the Free
