lib/nuggets/ruby.rb (Process.ruby): Added JRuby variant.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,12 +2,13 @@
 
 = Revision history for nuggets
 
-== 1.0.2 [unreleased]
+== 1.1.0 [unreleased]
 
 * Nuggets::LogParser::Rails no longer <tt>eval</tt>s the params hash; set the
   environment variable +NUGGETS_LOG_PARSER_RAILS_EVAL_PARAMS+ to restore this
   behaviour.
 * Added Object#rescue_if and Object#rescue_unless.
+* Added JRuby variant of Process.ruby.
 
 == 1.0.1 [2014-08-27]
 
