--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 = Revision history for nuggets
 
+== 1.2.1 [2015-04-14]
+
+* Ruby Core compatibility for Enumerable#minmax etc. Issue #4 by @codez.
+
 == 1.2.0 [2015-03-13]
 
 * Extracted Nuggets::RubyMixin from Nuggets::Ruby.
