--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 
 == 1.5.0 [unreleased]
 
+* Added String#highlight.
 * Dropped IO::NULL, available as File::NULL since Ruby 1.9.3.
 
 == 1.4.0 [2015-10-02]
