--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 = Revision history for nuggets
 
+== 1.6.0 [2018-07-12]
+
+* Added <tt>JSON.*_{multi,canonical}</tt>.
+
 == 1.5.0 [2016-04-19]
 
 * Added String#format.
